--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,13 @@ dependencies:
   firebase_storage: 12.4.4
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
+  
 flutter:
   uses-material-design: true
 
